[gd_scene load_steps=7 format=2]

[ext_resource path="res://niveles/niveles_J/Nivel_2/Level.gd" type="Script" id=1]
[ext_resource path="res://niveles/niveles_J/Plataforma_1/Plataforma.tscn" type="PackedScene" id=2]
[ext_resource path="res://niveles/niveles_J/Nivel_2/the-mysterious-starry-space-illustration-free-vector.jpg" type="Texture" id=3]
[ext_resource path="res://niveles/niveles_J/Base.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1, 2, 0, 0, 0, 0, 95.1618, 0.754982, 0, 0, 0, 0, 599, 1 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 9, 0, 0, 0, 0, 597, 10 )
}

[node name="Level" type="Node2D"]
script = ExtResource( 1 )
Plataforma = ExtResource( 2 )

[node name="Background" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2( 0, 1024 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxLayer"]
scale = Vector2( 1.23489, 1.69053 )
texture = ExtResource( 3 )
centered = false

[node name="PlataformaTimer" type="Timer" parent="."]

[node name="PlataformaPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PlataformaPathFollow" type="PathFollow2D" parent="PlataformaPath"]
position = Vector2( 1, 2 )
rotation = -0.0132213

[node name="TransportadorTimer" type="Timer" parent="."]

[node name="TransportadorPath" type="Path2D" parent="."]
position = Vector2( 1, -4 )
curve = SubResource( 2 )

[node name="TransportadorSpawn" type="PathFollow2D" parent="TransportadorPath"]
position = Vector2( 0, 9 )
rotation = 0.00167498

[node name="Area2D" parent="." instance=ExtResource( 4 )]
position = Vector2( 35, 934 )

[connection signal="timeout" from="PlataformaTimer" to="." method="_on_PataformaTimer_timeout"]
[connection signal="timeout" from="TransportadorTimer" to="." method="_on_TransportadorTimer_timeout"]
